--- a/.github/workflows/.artifact.yml
+++ b/.github/workflows/.artifact.yml
@@ -2,9 +2,9 @@
   uses: actions/upload-artifact@v2.2.0
   with:
     # Artifact name
-    name: # optional, default is artifact
+    name: artifact
     # A file, directory or wildcard pattern that describes what to upload
-    path: 
+    path: launcher.apk
     # The desired behavior if no files are found using the provided path.
 Available Options:
   warn: Output a warning but do not fail the action
