--- a/.github/workflows/.action.yml
+++ b/.github/workflows/.action.yml
@@ -1,6 +1,44 @@
-steps:
-- uses: actions/checkout@main
-- uses: actions/setup-dotnet@v1
-  with:
-    dotnet-version: '3.1.x' # SDK Version to use; x will use the latest version of the 3.1 channel
-- run: dotnet build <my project>
+name: "React Native Android Build APK"
+description: "This github action automatically builds the android apk under the artifact section"
+author: "realabbas"
+branding:
+      icon: "archive"
+      color: "blue"
+on:
+  push:
+    branches:
+      - master
+jobs:
+  # First Job
+  install-and-test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install npm dependencies
+        run: |
+          npm install
+      # For testing
+      - name: Run tests
+        run: |
+          npm test
+  # Second Job
+  build-android:
+    needs: install-and-test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install npm dependencies
+        run: |
+          npm install
+      - name: Make Gradlew Executable
+        run: cd android && chmod +x ./gradlew
+        # Build Command
+      - name: Build Android Release
+        run: |
+          cd android && gradlew assembleRelease
+      # Upload to Artifact
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v1
+        with:
+          name: app-release.apk
+          path: android/app/build/outputs/apk/release/
